fix hr line overflow

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -62,7 +62,7 @@ header .carousel-inner .carousel-item img {
 
 .home__info {
     hr.sep {
-        width: 70vh;
+        width: 85vw;
         background: rgb(134, 15, 212);
         height: 1.2px;
     }
